@@ -1,3 +1,8 @@
+2012-03-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/52582
+	* g++.dg/opt/pr52582.C: New test.
+
 2012-03-12  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	PR target/52450
