@@ -1,3 +1,9 @@
+2012-03-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/52582
+	* config/rs6000/rs6000.c (call_ABI_of_interest): Return true
+	if c_node is NULL.
+
 2012-03-13  Joseph Myers  <joseph@codesourcery.com>
 
 	* doc/invoke.texi (-std=c99), doc/standards.texi (C language):
